--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "commit": "git pull origin master && git add -A && git-cz"
+    "commit": "git add -A && git-cz"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@commitlint/cz-commitlint": "^17.3.0",
+    "commitizen": "^4.2.6",
     "husky": "^8.0.2"
   }
 }
