--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "commit": "git add -A && git-cz"
+    "commit": "git add -A && git-cz "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
-    "@commitlint/cz-commitlint": "^17.3.0",
-    "commitizen": "^4.2.6",
+    "@commitlint/cli": "17.0.1",
+    "@commitlint/config-conventional": "17.0.0",
+    "commitizen": "4.2.4",
+    "cz-git": "1.3.9",
     "husky": "^8.0.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-git"
+    }
   }
 }
