--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "devDependencies": {
     "@commitlint/cli": "17.0.1",
     "@commitlint/config-conventional": "17.0.0",
+    "@commitlint/cz-commitlint": "^17.3.0",
     "commitizen": "4.2.4",
-    "cz-git": "1.3.9",
-    "husky": "^8.0.2"
+    "husky": "^8.0.2",
+    "inquirer": "8"
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-git"
+      "path": "@commitlint/cz-commitlint"
     }
   }
 }
